# GjkEpa

./: .clang-format  CMakeLists.txt
include/: gjkepa.hpp
src/: common.hpp  epa.cpp  gjk.cpp
tests/: CMakeLists.txt  doctest.h  testepa.cpp  testgjk.cpp
